# aria2bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  banner.txt  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
.github/workflows/: docker.yml
src/: __init__.py
src/aria2/: __init__.py  installer.py  rpc.py  service.py
src/cloud/: __init__.py  base.py  onedrive.py  telegram_channel.py
src/core/: __init__.py  config.py  constants.py  exceptions.py  system.py
src/telegram/: __init__.py  app.py  handlers.py  keyboards.py
src/telegram/handlers/: __init__.py  app_ref.py  base.py  callbacks.py  cloud_channel.py  cloud_coordinator.py  cloud_onedrive.py  download.py  service.py
src/utils/: __init__.py  logger.py
